--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "vue": "^2.1.10",
     "vue-router": "^2.7.0",
     "webpack-dev-server": "^2.6.1"
+  },
+  "dependencies": {
+    "vuex": "^2.3.1"
   }
 }
